sgd/reproduction/playground/objects/SVMXC__Territory__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object provides basic definition of a service territory in ServiceMax. Service territories are not related in anyway to the Salesforce territory definitions.</description>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this territory is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Average_Driving_Time__c</fullName>
        <label>Average Driving Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Average_Speed__c</fullName>
        <description>Average speed in which the technicians of this territory travel on the road. Used in dispatch optimization</description>
        <label>Average Speed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Break Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Territory2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Description of the territory</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Fixed_Cost__c</fullName>
        <description>Any fixed costs associated with the technicians in this territory for each day of work order activity. Used in dispatch optimization</description>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Max_Daily_Hours__c</fullName>
        <description>Limits on number of hours of work order activity per day. Though this option is available, it is recommended to use technician business hours and break hours to indicate technician’s availability. Used in dispatch optimization</description>
        <label>Max Daily Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Max_Distance__c</fullName>
        <description>Distance in miles if the technicians in this territory cannot travel beyond this limit on a given route. Used in dispatch optimization</description>
        <label>Max Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Max_Hours__c</fullName>
        <description>Max hours</description>
        <label>Max Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Mode_Of_Travel__c</fullName>
        <label>Mode Of Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Driving</fullName>
                    <default>true</default>
                    <label>Driving</label>
                </value>
                <value>
                    <fullName>Driving Avoid Tolls</fullName>
                </value>
                <value>
                    <fullName>Driving Avoid Highways</fullName>
                </value>
                <value>
                    <fullName>Walking</fullName>
                </value>
                <value>
                    <fullName>Bicycling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_Connection_Name__c</fullName>
        <description>This field stores the Connection Instance Name.</description>
        <label>Optimizer Connection Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_External_ID__c</fullName>
        <description>Some identifier from the external scheduling optimizer to link the Territory</description>
        <externalId>true</externalId>
        <inlineHelpText>Some identifier from the external scheduling optimizer to link the Territory</inlineHelpText>
        <label>Optimizer External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_Last_Timestamp__c</fullName>
        <description>Last timestamp of when schedule details retrieved from the scheduling optmizer</description>
        <inlineHelpText>Last timestamp of when schedule details retrieved from the scheduling optmizer</inlineHelpText>
        <label>Optimizer Last Timestamp</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parent_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent territory a territory rolls up to. Lookup to an existing territory in ServiceMax</description>
        <label>Parent Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Child Territories</relationshipLabel>
        <relationshipName>Territory_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Per_Hour_Cost__c</fullName>
        <description>Average cost of technician’s time for this territory. Used in dispatch optimization</description>
        <label>Per Hour Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Per_Mile_Cost__c</fullName>
        <description>Average travel cost per mile for this territory. Used in dispatch optimization</description>
        <label>Per Mile Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Overnight_Stay_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field for overnight policy in the territory object</description>
        <inlineHelpText>Look up field for overnight policy in the territory object</inlineHelpText>
        <label>Overnight Stay Policy</label>
        <referenceTo>SVMXC__SM_Overnight_Stay_Policy__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Territory_Code__c</fullName>
        <description>Any internal (typically financials) code your organization uses to refer to this territory</description>
        <label>Territory Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Territory_s_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory&apos;s Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Territory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Active__c</columns>
        <columns>SMAX_PS_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>